added computing page

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ ul li:hover {
   position: absolute;
   top: 50vh;
 }
+#academic_director{
+
+  height: 625px;
+  width: 625px;
+
+}
 @media (min-width: 768px) {
   #overlay_txt {
     position: absolute;
@@ -49,4 +55,10 @@ ul li:hover {
   position: absolute;
   top:30vh;
 }
+}
+@media (max-width: 768px) {
+ #academic_director{
+   height: 400px;
+   width: 400px;
+ }
 }
