--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-ul {
+nav ul {
   list-style-type: none;
   display: block;
   align-items: flex-end;
@@ -6,13 +6,13 @@ ul {
   top: 20px;
   right: 20px;
 }
-ul li {
+nav ul li {
   align-items: center;
   padding: 15px;
   flex-grow: 100%;
   float: left;
 }
-ul li:hover {
+nav ul li:hover {
   text-decoration: underline;
 }
 #logo {
